Add some snippets.

--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -87,6 +87,7 @@
     "import matplotlib\n",
     "matplotlib.rcParams['figure.figsize'] = (9, 9)\n",
     "import matplotlib.pyplot as plt\n",
+    "import matplotlib.dates as mdates\n",
     "\n",
     "import datetime\n",
     "import pandas as pd\n",
@@ -1360,6 +1361,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### YAML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See https://stackoverflow.com/a/35968457"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "\n",
+    "with open('python_pandas_io_test.yaml', 'r') as f:\n",
+    "    df = pd.io.json.json_normalize(yaml.load(f))\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Other file formats"
    ]
   },
@@ -1771,6 +1800,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df[(df.B < 20) | (df.B > 50)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[(df.B < 20) | (df.B > 50), 'C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df[(df['A'] >= 2) & (df['B'] < 50)]"
    ]
   },
@@ -1893,6 +1940,16 @@
    "outputs": [],
    "source": [
     "df.loc[(df.B < 50.) & (df.B > 20), 'C'] = 0\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[(df.B < 20) | (df.B > 50), 'C'] = -1\n",
     "df"
    ]
   },
@@ -3060,7 +3117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dti = pd.date_range('1/1/2012 00:00', periods=40, freq='D')\n",
+    "dti = pd.date_range('2012-01-01 00:00', periods=40, freq='D')\n",
     "ts = pd.Series(np.random.randint(0, 200, len(dti)), index=dti)"
    ]
   },
@@ -3080,6 +3137,28 @@
    "outputs": [],
    "source": [
     "ts.plot(x_compat=True);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dti = pd.date_range('2018-01-01 00:00', '2018-01-03 00:00', freq='H')\n",
+    "ts = pd.Series(np.random.randint(0, 100, len(dti)), index=dti)\n",
+    "\n",
+    "ax = ts.plot(x_compat=True, figsize=(16, 4))    # x_compat is required as matplotlib doesn't understand pandas datetime format -> x_compat=True makes the conversion...\n",
+    "\n",
+    "# set monthly locator\n",
+    "ax.xaxis.set_major_locator(mdates.DayLocator(interval=1))\n",
+    "ax.xaxis.set_minor_locator(mdates.HourLocator(interval=1))\n",
+    "\n",
+    "# set formatter\n",
+    "ax.xaxis.set_major_formatter(mdates.DateFormatter('%d-%m-%Y'))\n",
+    "\n",
+    "# set font and rotation for date tick labels\n",
+    "plt.gcf().autofmt_xdate()"
    ]
   },
   {
@@ -3415,6 +3494,121 @@
    "outputs": [],
    "source": [
     "ts.resample('3h').sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Is there an offset ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No. `resample('D')` aggregate values for every days between \"00:00:00\" and \"23:59:59\", whatever the first index of `ts`.\n",
+    "See the examples bellow..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dti = pd.DatetimeIndex(['2018-1-1 12:00',\n",
+    "                        '2018-1-2 08:00', '2018-1-2 18:00', '2018-1-2 23:59:59',\n",
+    "                        '2018-1-3 00:00'])\n",
+    "ts = pd.Series([0.,\n",
+    "                10., 20., 30.,\n",
+    "                5.], index=dti)\n",
+    "\n",
+    "print(\"DATA:\")\n",
+    "print(ts)\n",
+    "\n",
+    "ts_resampled = ts.resample('D').mean()\n",
+    "\n",
+    "print()\n",
+    "print(\"MEAN:\")\n",
+    "print(ts_resampled)\n",
+    "\n",
+    "# Illustrative plot\n",
+    "\n",
+    "ax = ts.plot(x_compat=True, figsize=(18, 3), style=\"*-\", color=\"blue\")\n",
+    "ax.vlines(pd.DatetimeIndex(['2018-1-1 00:00', '2018-1-2 00:00', '2018-1-3 00:00']), ymin=-10, ymax=40, color=\"red\", linestyle=\":\", linewidth=2, alpha=0.5);\n",
+    "ax.vlines(pd.DatetimeIndex(['2018-1-1 12:00', '2018-1-2 12:00', '2018-1-3 12:00']), ymin=-10, ymax=40, color=\"green\", linestyle=\":\", linewidth=2, alpha=0.5);\n",
+    "\n",
+    "ax.plot(pd.DatetimeIndex(['2018-1-1 12:15', '2018-1-2 11:45']), [40, 40], marker=\"|\", markersize=20, color=\"green\")\n",
+    "ax.plot(pd.DatetimeIndex(['2018-1-2 12:15', '2018-1-3 11:45']), [40, 40], marker=\"|\", markersize=20, color=\"green\")\n",
+    "\n",
+    "ax.plot(pd.DatetimeIndex(['2018-1-1 00:15', '2018-1-1 23:45']), [35, 35], marker=\"|\", markersize=20, color=\"red\")\n",
+    "ax.plot(pd.DatetimeIndex(['2018-1-2 00:15', '2018-1-2 23:45']), [35, 35], marker=\"|\", markersize=20, color=\"red\")\n",
+    "\n",
+    "ts_resampled.plot(color=\"red\", style=\"*-\", label=\"mean\", alpha=0.75, ax=ax)\n",
+    "\n",
+    "# set monthly locator\n",
+    "ax.xaxis.set_major_locator(mdates.DayLocator(interval=1))\n",
+    "ax.xaxis.set_minor_locator(mdates.HourLocator(interval=1))\n",
+    "\n",
+    "# set formatter\n",
+    "ax.xaxis.set_major_formatter(mdates.DateFormatter('%d-%m-%Y  %H:%M'))\n",
+    "\n",
+    "# set font and rotation for date tick labels\n",
+    "plt.gcf().autofmt_xdate()\n",
+    "\n",
+    "ax.legend()\n",
+    "ax.set_xlabel('Time');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dti = pd.DatetimeIndex(['2018-1-1 01:00',\n",
+    "                        '2018-1-1 05:30', '2018-1-1 07:30',\n",
+    "                        '2018-1-1 10:00'])\n",
+    "ts = pd.Series([0.,\n",
+    "                10., 20.,\n",
+    "                5.], index=dti)\n",
+    "\n",
+    "print(\"DATA:\")\n",
+    "print(ts)\n",
+    "\n",
+    "ts_resampled = ts.resample('5h').mean()\n",
+    "\n",
+    "print()\n",
+    "print(\"MEAN:\")\n",
+    "print(ts_resampled)\n",
+    "\n",
+    "# Illustrative plot\n",
+    "\n",
+    "ax = ts.plot(x_compat=True, figsize=(18, 3), style=\"*-\", color=\"blue\")\n",
+    "ax.vlines(pd.DatetimeIndex(['2018-1-1 00:00', '2018-1-1 05:00', '2018-1-1 10:00']), ymin=-10, ymax=40, color=\"red\", linestyle=\":\", linewidth=2, alpha=0.5);\n",
+    "ax.vlines(pd.DatetimeIndex(['2018-1-1 01:00', '2018-1-1 06:00', '2018-1-1 11:00']), ymin=-10, ymax=40, color=\"green\", linestyle=\":\", linewidth=2, alpha=0.5);\n",
+    "\n",
+    "ax.plot(pd.DatetimeIndex(['2018-1-1 01:05', '2018-1-1 05:55']), [40, 40], marker=\"|\", markersize=20, color=\"green\")\n",
+    "ax.plot(pd.DatetimeIndex(['2018-1-1 06:05', '2018-1-1 10:55']), [40, 40], marker=\"|\", markersize=20, color=\"green\")\n",
+    "\n",
+    "ax.plot(pd.DatetimeIndex(['2018-1-1 00:05', '2018-1-1 04:55']), [35, 35], marker=\"|\", markersize=20, color=\"red\")\n",
+    "ax.plot(pd.DatetimeIndex(['2018-1-1 05:05', '2018-1-1 09:55']), [35, 35], marker=\"|\", markersize=20, color=\"red\")\n",
+    "\n",
+    "ts_resampled.plot(color=\"red\", style=\"*-\", label=\"mean\", alpha=0.75, ax=ax)\n",
+    "\n",
+    "# set monthly locator\n",
+    "ax.xaxis.set_major_locator(mdates.HourLocator(interval=1))\n",
+    "#ax.xaxis.set_minor_locator(mdates.HourLocator(interval=1))\n",
+    "\n",
+    "# set formatter\n",
+    "ax.xaxis.set_major_formatter(mdates.DateFormatter('%H:%M'))\n",
+    "\n",
+    "# set font and rotation for date tick labels\n",
+    "plt.gcf().autofmt_xdate()\n",
+    "\n",
+    "ax.legend()\n",
+    "ax.set_xlabel('Time');"
    ]
   },
   {
