--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -3507,7 +3507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No. `resample('D')` aggregate values for every days between \"00:00:00\" and \"23:59:59\", whatever the first index of `ts`.\n",
+    "No. `resample('D')` aggregates values for each day between \"00:00:00\" and \"23:59:59\", whatever the first index of `ts`.\n",
     "See the examples bellow..."
    ]
   },
