--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -1361,12 +1361,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yaml\n",
+    "!echo \"- {A: 1, B: 2}\"     > python_pandas_io_test.yaml\n",
+    "!echo \"- {A: 3}\" >> python_pandas_io_test.yaml\n",
+    "!echo \"- {B: 4}\" >> python_pandas_io_test.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cat python_pandas_io_test.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import yaml\n",
     "\n",
-    "with open('python_pandas_io_test.yaml', 'r') as f:\n",
-    "    df = pd.io.json.json_normalize(yaml.load(f))\n",
+    "    with open('python_pandas_io_test.yaml', 'r') as f:\n",
+    "        df = pd.io.json.json_normalize(yaml.load(f))\n",
     "\n",
-    "df"
+    "    print(df)\n",
+    "except:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm python_pandas_io_test.yaml"
    ]
   },
   {
