--- a/python_numpy_en.ipynb
+++ b/python_numpy_en.ipynb
@@ -66,7 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import math"
    ]
   },
   {
