Fix figures and labels size.

--- a/maths_mandelbrot_set_en.ipynb
+++ b/maths_mandelbrot_set_en.ipynb
@@ -26,22 +26,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "import matplotlib\n",
-    "matplotlib.rcParams['figure.figsize'] = (10, 10)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,6 +63,7 @@
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
@@ -109,13 +94,13 @@
     "\n",
     "# Plot data #################\n",
     "# (nice color maps: summer, magma, gist_gray, gist_yarg, gist_heat, Blues, coolwarm, copper)\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize=(14, 14))\n",
     "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"none\", cmap=cm.gray_r)\n",
     "\n",
     "ax.set_axis_off()\n",
     "\n",
     "# Set title and labels\n",
-    "plt.title(\"Mandelbrot set\")\n",
+    "plt.title(\"Mandelbrot set\", fontsize=26)\n",
     "\n",
     "plt.show()"
    ]
@@ -218,13 +203,13 @@
     "data = np.array([mandelbrot_version2(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
     "# Plot data #################\n",
-    "fig, ax = plt.subplots()\n",
+    "fig, ax = plt.subplots(figsize=(14, 14))\n",
     "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"bicubic\", cmap=cm.Blues)\n",
     "\n",
     "# Set title and labels\n",
-    "plt.title(\"Mandelbrot set\")\n",
-    "ax.set_xlabel(\"Re(c)\")\n",
-    "ax.set_ylabel(\"Im(c)\")\n",
+    "plt.title(\"Mandelbrot set\", fontsize=26)\n",
+    "ax.set_xlabel(\"Re(c)\", fontsize=18)\n",
+    "ax.set_ylabel(\"Im(c)\", fontsize=18)\n",
     "\n",
     "plt.show()"
    ]
@@ -250,15 +235,15 @@
     "data = np.array([mandelbrot_version2(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
     "# Plot data #################\n",
-    "fig = plt.figure()\n",
+    "fig = plt.figure(figsize=(14, 10))\n",
     "ax = axes3d.Axes3D(fig)\n",
     "ax.plot_surface(xgrid, ygrid, data, cmap=cm.jet, rstride=1, cstride=1, color='b', shade=True)\n",
     "\n",
     "# Set title and labels\n",
-    "plt.title(\"Mandelbrot set\")\n",
-    "ax.set_xlabel(\"Re(c)\")\n",
-    "ax.set_ylabel(\"Im(c)\")\n",
-    "ax.set_zlabel(\"Iterations\")\n",
+    "plt.title(\"Mandelbrot set\", fontsize=26)\n",
+    "ax.set_xlabel(\"Re(c)\", fontsize=18)\n",
+    "ax.set_ylabel(\"Im(c)\", fontsize=18)\n",
+    "ax.set_zlabel(\"Iterations\", fontsize=18)\n",
     "\n",
     "plt.show()"
    ]
