--- a/python_pil_pillow_tiff_to_npy_en.ipynb
+++ b/python_pil_pillow_tiff_to_npy_en.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_path = \"~/Téléchargements/full_tif200.tif\""
+    "img_path = \"full_tif256.tif\""
    ]
   },
   {
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a.min(), a.max()"
+    "a.min(), a.max(), a.shape"
    ]
   },
   {
