--- a/python_geopandas_cities_near_paris_saclay_en.ipynb
+++ b/python_geopandas_cities_near_paris_saclay_en.ipynb
@@ -9,7 +9,7 @@
     ]
    },
    "source": [
-    "# Titre"
+    "# Cities near Paris Saclay"
    ]
   },
   {
@@ -20,7 +20,7 @@
     ]
    },
    "source": [
-    "http://geopandas.org/gallery/plotting_basemap_background.html#adding-a-background-map-to-plots\n"
+    "http://geopandas.org/gallery/plotting_basemap_background.html#adding-a-background-map-to-plots"
    ]
   },
   {
