--- a/ai_optimization_benchmark_problems_en.ipynb
+++ b/ai_optimization_benchmark_problems_en.ipynb
@@ -103,7 +103,8 @@
     "                                   title=\"\",\n",
     "                                   vmin=None,\n",
     "                                   vmax=None,\n",
-    "                                   zlog=True):\n",
+    "                                   zlog=True,\n",
+    "                                   output_file_name=None):\n",
     "    \"\"\"TODO\n",
     "    \"\"\"\n",
     "    fig, ax = plt.subplots(figsize=(12, 8))\n",
@@ -169,6 +170,9 @@
     "    ax.set_ylabel(r\"$x_2$\")\n",
     "\n",
     "    ax.legend(fontsize=12)\n",
+    "    \n",
+    "    if output_file_name is not None:\n",
+    "        plt.savefig(output_file_name, transparent=True)\n",
     "\n",
     "    plt.show()"
    ]
@@ -189,7 +193,8 @@
     "                           xstar=None,\n",
     "                           angle_view=None,\n",
     "                           title=\"\",\n",
-    "                           zlog=True):\n",
+    "                           zlog=True,\n",
+    "                           output_file_name=None):\n",
     "    \"\"\"TODO\n",
     "    \"\"\"\n",
     "    fig = plt.figure(figsize=(12, 8))\n",
@@ -243,6 +248,9 @@
     "    ax.set_ylabel(r\"$x_2$\")\n",
     "\n",
     "    ax.legend(fontsize=12)\n",
+    "    \n",
+    "    if output_file_name is not None:\n",
+    "        plt.savefig(output_file_name, transparent=True)\n",
     "    \n",
     "    plt.show()"
    ]
@@ -353,7 +361,8 @@
     "                       xmin=-2*np.ones(2),\n",
     "                       xmax=2*np.ones(2),\n",
     "                       xstar=np.zeros(2),\n",
-    "                       title=r\"$f(x_1, x_2) = \\sqrt{|x_1|} + \\sqrt{|x_2|}$\")"
+    "                       title=r\"$f(x_1, x_2) = \\sqrt{|x_1|} + \\sqrt{|x_2|}$\",\n",
+    "                       output_file_name=\"unnamed1_3d.png\")"
    ]
   },
   {
@@ -370,7 +379,8 @@
     "                               xmin=-2*np.ones(2),\n",
     "                               xmax=2*np.ones(2),\n",
     "                               xstar=np.zeros(2),\n",
-    "                               title=r\"$f(x_1, x_2) = \\sqrt{|x_1|} + \\sqrt{|x_2|}$\")"
+    "                               title=r\"$f(x_1, x_2) = \\sqrt{|x_1|} + \\sqrt{|x_2|}$\",\n",
+    "                               output_file_name=\"unnamed1.png\")"
    ]
   },
   {
@@ -522,7 +532,8 @@
     "                       xmax=2*np.ones(2),\n",
     "                       xstar=np.zeros(2),\n",
     "                       angle_view=(55, 83),\n",
-    "                       title=\"Sphere function\")"
+    "                       title=\"Sphere function\",\n",
+    "                       output_file_name=\"sphere_3d.png\")"
    ]
   },
   {
@@ -539,7 +550,8 @@
     "                               xmin=-10*np.ones(2),\n",
     "                               xmax=10*np.ones(2),\n",
     "                               xstar=np.zeros(2),\n",
-    "                               title=\"Sphere function\")"
+    "                               title=\"Sphere function\",\n",
+    "                               output_file_name=\"sphere.png\")"
    ]
   },
   {
@@ -716,7 +728,8 @@
     "                       xmax=2*np.ones(2),\n",
     "                       xstar=np.ones(2),\n",
     "                       angle_view=(30, 45),\n",
-    "                       title=\"Rosenbrock function\")"
+    "                       title=\"Rosenbrock function\",\n",
+    "                       output_file_name=\"rosenbrock_3d.png\")"
    ]
   },
   {
@@ -733,7 +746,8 @@
     "                               xmin=-2*np.ones(2),\n",
     "                               xmax=2*np.ones(2),\n",
     "                               xstar=np.ones(2),\n",
-    "                               title=\"Rosenbrock function\")"
+    "                               title=\"Rosenbrock function\",\n",
+    "                               output_file_name=\"rosenbrock.png\")"
    ]
   },
   {
@@ -882,7 +896,8 @@
     "                       xmax=5*np.ones(2),\n",
     "                       xstar=np.array([[3., 2.], [-2.805118, 3.131312], [-3.779310, -3.283186], [3.584428, -1.848126]]).T,\n",
     "                       angle_view=(55, -25),\n",
-    "                       title=\"The Himmelblau's function\")"
+    "                       title=\"The Himmelblau's function\",\n",
+    "                       output_file_name=\"himmelblau_3d.png\")"
    ]
   },
   {
@@ -899,7 +914,8 @@
     "                               xmin=-5*np.ones(2),\n",
     "                               xmax=5*np.ones(2),\n",
     "                               xstar=np.array([[3., 2.], [-2.805118, 3.131312], [-3.779310, -3.283186], [3.584428, -1.848126]]).T,\n",
-    "                               title=\"The Himmelblau's function\")"
+    "                               title=\"The Himmelblau's function\",\n",
+    "                               output_file_name=\"himmelblau.png\")"
    ]
   },
   {
@@ -1034,7 +1050,8 @@
     "                       xmax=5.12*np.ones(2),\n",
     "                       xstar=np.zeros(2),\n",
     "                       angle_view=(35, 25),\n",
-    "                       title=\"Rastrigin function\")"
+    "                       title=\"Rastrigin function\",\n",
+    "                       output_file_name=\"rastrigin_3d.png\")"
    ]
   },
   {
@@ -1051,7 +1068,8 @@
     "                               xmin=-5.12*np.ones(2),\n",
     "                               xmax=5.12*np.ones(2),\n",
     "                               xstar=np.zeros(2),\n",
-    "                               title=\"Rastrigin function\")"
+    "                               title=\"Rastrigin function\",\n",
+    "                               output_file_name=\"rastrigin.png\")"
    ]
   },
   {
@@ -1215,7 +1233,8 @@
     "                       xstar=np.ones(2) * np.pi,\n",
     "                       #angle_view=(35, 25),\n",
     "                       title=\"Easom function\",\n",
-    "                       zlog=False)"
+    "                       zlog=False,\n",
+    "                       output_file_name=\"easom_3d.png\")"
    ]
   },
   {
@@ -1233,7 +1252,8 @@
     "                               xmax=5*np.ones(2),\n",
     "                               xstar=np.ones(2) * np.pi,\n",
     "                               zlog=False,\n",
-    "                               title=\"Easom function\")"
+    "                               title=\"Easom function\",\n",
+    "                               output_file_name=\"easom.png\")"
    ]
   },
   {
@@ -1353,7 +1373,8 @@
     "                       xstar=np.array([[1.34941, 1.34941, -1.34941, -1.34941], [1.34941, -1.34941, 1.34941, -1.34941]]),\n",
     "                       #angle_view=(35, 25),\n",
     "                       title=\"Cross-in-tray function\",\n",
-    "                       zlog=False)"
+    "                       zlog=False,\n",
+    "                       output_file_name=\"cross_in_tray_3d.png\")"
    ]
   },
   {
@@ -1369,7 +1390,8 @@
     "                               title=\"Cross-in-tray function\",\n",
     "                               #vmin=-2.0,\n",
     "                               #vmax=-0.5,\n",
-    "                               zlog=False)"
+    "                               zlog=False,\n",
+    "                               output_file_name=\"cross_in_tray.png\")"
    ]
   },
   {
@@ -1493,7 +1515,8 @@
     "                       xstar=np.array([[8.05502, 8.05502, -8.05502, -8.05502], [9.66459, -9.66459, 9.66459, -9.66459]]),\n",
     "                       #angle_view=(35, 25),\n",
     "                       title=\"Hölder table function\",\n",
-    "                       zlog=False)"
+    "                       zlog=False,\n",
+    "                       output_file_name=\"holder_3d.png\")"
    ]
   },
   {
@@ -1511,7 +1534,8 @@
     "                               xmax=10*np.ones(2),\n",
     "                               xstar=np.array([[8.05502, 8.05502, -8.05502, -8.05502], [9.66459, -9.66459, 9.66459, -9.66459]]),\n",
     "                               zlog=False,\n",
-    "                               title=\"Hölder table function\")"
+    "                               title=\"Hölder table function\",\n",
+    "                               output_file_name=\"holder.png\")"
    ]
   },
   {
@@ -1583,7 +1607,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
