--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -416,7 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### With columns from dict"
+    "#### With columns and values from a dictionary of lists"
    ]
   },
   {
@@ -432,9 +432,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dict = {'A': 'foo',\n",
-    "             'B': [10, 20, 30],\n",
-    "             'C': 3}\n",
+    "data_dict = {\n",
+    "                 'A': 'foo',\n",
+    "                 'B': [10, 20, 30],\n",
+    "                 'C': 3\n",
+    "            }\n",
+    "\n",
     "df = pd.DataFrame(data_dict)\n",
     "df"
    ]
@@ -452,10 +455,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dict = {'A': 'foo',\n",
-    "             'B': [10, 20, 30],\n",
-    "             'C': 3}\n",
+    "data_dict = {\n",
+    "                'A': 'foo',\n",
+    "                'B': [10, 20, 30],\n",
+    "                'C': 3\n",
+    "            }\n",
+    "\n",
     "df = pd.DataFrame(data_dict, index=[10, 20, 30])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### With columns and values from a list of dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dict = [\n",
+    "                {'A': 1,   'B': 2, 'C': 3},\n",
+    "                {'A': 10,  'C': 30},\n",
+    "                {'B': 200, 'C': 300}\n",
+    "            ]\n",
+    "\n",
+    "df = pd.DataFrame(data_dict)\n",
     "df"
    ]
   },
@@ -4348,7 +4377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
