--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -492,6 +492,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### With columns and values from a dictionary of dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dict = {\n",
+    "                'k1' : {'A': 1,   'B': 2, 'C': 3},\n",
+    "                'k2' : {'A': 10,  'C': 30},\n",
+    "                'k3' : {'B': 200, 'C': 300}\n",
+    "            }\n",
+    "\n",
+    "df = pd.DataFrame(data_dict)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.T"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Get information about a dataframe"
    ]
   },
