--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -1632,7 +1632,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "### Select a single row"
    ]
@@ -1696,7 +1698,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "### Select multiple rows"
    ]
@@ -1840,6 +1844,41 @@
     "- http://pandas.pydata.org/pandas-docs/stable/indexing.html#returning-a-view-versus-a-copy\n",
     "- http://pandas.pydata.org/pandas-docs/stable/indexing.html#why-does-assignment-fail-when-using-chained-indexing\n",
     "- http://pandas.pydata.org/pandas-docs/stable/indexing.html#evaluation-order-matters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Argmin rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame([[4000, 10, 3],\n",
+    "                   [100, 200, 1],\n",
+    "                   [30, 1000, 10]], columns=['a', 'b', 'c'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select the line having the minimal `c`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.iloc[df.c.idxmin()]"
    ]
   },
   {
@@ -2705,8 +2744,8 @@
    "outputs": [],
    "source": [
     "a = np.array([[3, 5, 5, 5, 7, 7, 7, 7],\n",
-    "              [2, 4, 4, 3, 1, 3, 3, 2],\n",
-    "              [3, 4, 5, 6, 1, 8, 9, 8]]).T\n",
+    "              [2, 4, 5, 3, 3, 2, 3, 2],\n",
+    "              [3, 5, 4, 6, 8, 1, 9, 8]]).T\n",
     "df = pd.DataFrame(a,\n",
     "                  columns=['A', 'B', 'C'])\n",
     "\n",
@@ -2745,6 +2784,29 @@
    "outputs": [],
    "source": [
     "df.groupby([\"A\"]).mean().B"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GroupBy and argmin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Group by `A` and return the argmin of `C` for each group."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.iloc[ df.groupby(\"A\").C.idxmin() ]"
    ]
   },
   {
