--- a/python_pandas_en.ipynb
+++ b/python_pandas_en.ipynb
@@ -1861,7 +1861,7 @@
    "source": [
     "df = pd.DataFrame([[4000, 10, 3],\n",
     "                   [100, 200, 1],\n",
-    "                   [30, 1000, 10]], columns=['a', 'b', 'c'])\n",
+    "                   [30, 1000, 10]], columns=['a', 'b', 'c'], index=['k1', 'k2', 'k3'])\n",
     "df"
    ]
   },
@@ -1878,7 +1878,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.iloc[df.c.idxmin()]"
+    "df.c.idxmin()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[ df.c.idxmin() ]"
    ]
   },
   {
@@ -2806,7 +2815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.iloc[ df.groupby(\"A\").C.idxmin() ]"
+    "df.loc[ df.groupby(\"A\").C.idxmin() ]"
    ]
   },
   {
