--- a/python_seaborn_en.ipynb
+++ b/python_seaborn_en.ipynb
@@ -68,7 +68,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Scatter plot"
+    "## Aspect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.set_context('talk')\n",
+    "#sns.set_context('poster')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figsize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = sns.load_dataset(\"fmri\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.relplot(x=\"timepoint\", y=\"signal\", kind=\"line\", data=df);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.relplot(x=\"timepoint\", y=\"signal\", kind=\"line\", data=df,\n",
+    "            height=6, aspect=2);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "## Relplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scatter plot"
    ]
   },
   {
@@ -110,9 +172,96 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "### Line plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Line plot"
+    "Official documentation: https://seaborn.pydata.org/tutorial/relational.html#aggregation-and-representing-uncertainty\n",
+    "\n",
+    "\"The default behavior in seaborn is to aggregate the multiple measurements at each x value by plotting the mean and the 95% confidence interval around the mean.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = []\n",
+    "\n",
+    "for run in range(100):\n",
+    "    for x in np.linspace(-10, 10, 100):\n",
+    "        y = 0\n",
+    "        row = [x, y + np.random.normal(), run]\n",
+    "        l.append(row)\n",
+    "        \n",
+    "df = pd.DataFrame(l, columns=[\"x\", \"y\", \"run\"])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.relplot(x=\"x\", y=\"y\", kind=\"line\", data=df,\n",
+    "            height=6, aspect=2)\n",
+    "\n",
+    "plt.axhline(0, color=\"r\", linestyle=\":\", label=\"Actual mean\")\n",
+    "\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.relplot(x=\"x\", y=\"y\", kind=\"line\", data=df,\n",
+    "            height=6, aspect=2,\n",
+    "            units=\"run\", estimator=None, alpha=0.1)\n",
+    "\n",
+    "plt.axhline(0, color=\"r\", linestyle=\":\", label=\"Actual mean\")\n",
+    "\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.relplot(x=\"x\", y=\"y\", kind=\"line\", data=df,\n",
+    "            height=6, aspect=2,\n",
+    "            estimator=np.median)\n",
+    "\n",
+    "plt.axhline(0, color=\"r\", linestyle=\":\", label=\"Actual median\")\n",
+    "\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Second example"
    ]
   },
   {
@@ -140,7 +289,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.relplot(x=\"x\", y=\"y\", kind=\"line\", hue=\"func\", data=df);"
+    "sns.relplot(x=\"x\", y=\"y\", kind=\"line\", hue=\"func\", data=df,\n",
+    "            height=6, aspect=2);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Third example"
    ]
   },
   {
@@ -159,7 +316,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.relplot(x=\"timepoint\", y=\"signal\", data=fmri);"
+    "sns.relplot(x=\"timepoint\", y=\"signal\", data=fmri,\n",
+    "            height=6, aspect=2);"
    ]
   },
   {
@@ -177,12 +335,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.relplot(x=\"timepoint\", y=\"signal\", kind=\"line\", data=fmri);"
+    "sns.relplot(x=\"timepoint\", y=\"signal\", kind=\"line\", data=fmri,\n",
+    "            height=6, aspect=2);"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "## Pairplot"
    ]
