--- a/nb_dev_python/python_numpy_en.ipynb
+++ b/nb_dev_python/python_numpy_en.ipynb
@@ -279,8 +279,8 @@
    "outputs": [],
    "source": [
     "mu = np.array([0., 0.])\n",
-    "cov = np.array([[1., 0.],\n",
-    "                [1., 1.]])\n",
+    "cov = np.array([[1., 0.3],\n",
+    "                [0.3, 1.]])\n",
     "num_points = 10\n",
     "\n",
     "np.random.multivariate_normal(mu, cov, num_points)"
