--- a/nb_dev_python/python_pandas_en.ipynb
+++ b/nb_dev_python/python_pandas_en.ipynb
@@ -2262,6 +2262,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Change columns order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_array = np.array([np.arange(1, 5, 1), np.arange(10, 50, 10), np.arange(100, 500, 100)]).T\n",
+    "df = pd.DataFrame(data_array,\n",
+    "                  columns=['A', 'B', 'C'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[['B', 'C', 'A']]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Sort a DataFrame"
    ]
   },
